Scale bounds from dip to pixels in CompositorFrame in content::MusBrowserCompositorOutputSurface since CompositorFrames we submit to the display-manager need to be in physical pixel-space.

BUG=680982
TEST=manual (--force-device-scale-factor=2)

Review-Url: https://codereview.chromium.org/2644983002
Cr-Commit-Position: refs/heads/master@{#445137}

Former-commit-id: 5ab7d1bfe8bf1024ea1459002c179a8cd24f6f29